Bug 76098 - FILE SAVE: Corruption - ContentType for .xlsm external data file from chart is wrong.
Summary: FILE SAVE: Corruption - ContentType for .xlsm external data file from chart i...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Ravindra Vidhate
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-13 05:52 UTC by Ravindra Vidhate
Modified: 2015-01-24 13:57 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
FileWithChart[Macro Enabled] (174.68 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-13 05:52 UTC, Ravindra Vidhate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-03-13 05:52:02 UTC
Created attachment 95685 [details]
FileWithChart[Macro Enabled]

1. Open a File which has Pie Chart in LO.
2. The content type of Pie Chart should Macro Enabled.
3. using LO, SAVE this file.
4. Opened the Save file in MS-Office.
5. The file gets corrupted due to the ContentType gets changed.
Comment 1 Commit Notification 2014-03-17 09:30:13 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1b5e32a704a93ceb777799b20647ae0bc452866

fdo#76098 ContentType for .xlsm external data file  is wrong



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-03-20 10:37:30 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4f729894581f69d09bde459a348c79a9c781977

Fix assertXPath in testcase for fdo#76098



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.