fdo#76098 ContentType for .xlsm external data file  is wrong

1. Open a File which has Pie Chart in LO.
2. The content type of Pie Chart should Macro Enabled.
3. using LO, SAVE this file.
4. Opened the Save file in MS-Office.
5. The file gets corrupted due to the ContentType gets changed.

Conflicts:
	sw/qa/extras/inc/swmodeltestbase.hxx
Reviewed on:
	https://gerrit.libreoffice.org/8572

Change-Id: I20f92f52cc79df4fc5e10c4e4867e2e704ba3c86